--- a/JuegoTimbiriche/src/main/java/com/itson/frames/FrmLobby.form
+++ b/JuegoTimbiriche/src/main/java/com/itson/frames/FrmLobby.form
@@ -33,7 +33,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" max="32767" attributes="0"/>
+          <Component id="jPanel1" pref="560" max="32767" attributes="0"/>
           <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
